<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/music_transition_name_card"
    android:layout_margin="@dimen/card_view_elevation"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/card_foreground"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_radius"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/iv_item_music_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_loader_empty"
            android:transitionName="@string/music_transition_name_image"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/tv_item_music_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/common_text_color_normal"
                android:transitionName="@string/music_transition_name_text"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/tv_item_music_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/common_gray_light"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:transitionName="@string/music_transition_name_author"/>

            <TextView
                android:id="@+id/tv_item_music_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/common_red_dark"
                android:transitionName="@string/music_transition_name_score"
                android:textSize="13sp" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>