<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_base_tool_bar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="@string/music_transition_name_card"
                android:layout_margin="@dimen/card_view_elevation"
                android:clickable="false"
                android:focusable="false"
                android:foreground="@drawable/card_foreground"
                android:minHeight="100dp"
                android:orientation="vertical"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/iv_music_pic"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerVertical="true"
                        android:transitionName="@string/music_transition_name_image"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_toRightOf="@id/iv_music_pic"
                        android:orientation="vertical"
                        android:layout_centerVertical="true">

                        <TextView
                            android:id="@+id/tv_music_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/common_text_color_normal"
                            android:textSize="16sp"
                            android:transitionName="@string/music_transition_name_text"/>

                        <TextView
                            android:id="@+id/tv_music_real_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/common_gray_light"
                            android:textSize="14sp"
                            android:visibility="gone"/>
                        <TextView
                            android:id="@+id/tv_music_author"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/common_text_color_normal"
                            android:textSize="14sp"
                            android:transitionName="@string/music_transition_name_author"/>


                        <TextView
                            android:id="@+id/tv_music_publish_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/common_gray_light"
                            android:textSize="14sp" />

                        <!--<TextView
                            android:id="@+id/tv_movie_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/gray_light"
                            android:textSize="14sp" />-->

                        <TextView
                            android:id="@+id/tv_music_score"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/common_red_dark"
                            android:textSize="14sp"
                            android:transitionName="@string/music_transition_name_score"/>
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/tv_gray_bg"
                android:textSize="16sp"
                android:text="@string/music_brief_introduction_text" />

            <TextView
                android:id="@+id/tv_music_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/tv_gray_bg"
                android:padding="5dp" />

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/tv_gray_bg"
                android:text="@string/author_introduction_text" />

            <TextView
                android:id="@+id/tv_author_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/tv_gray_bg"
                android:padding="5dp" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/tv_gray_bg"
                android:text="@string/music_other_music_list"
                android:textSize="16sp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <com.roshine.lookbar.commonlib.wight.recyclerview.normal.NormalRecyclertView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_catalog_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/tv_gray_bg"
                android:text="@string/music_catalog_null" />

            <Button
                android:id="@+id/btn_get_more"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/get_more_text"
                android:textColor="@color/common_white"
                android:textSize="15sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
